--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "handlebars": "^4.7.8",
     "mysql2": "^2.2.5",
     "openai": "^4.24.1",
     "sequelize": "^6.3.5"
